input-group support
When using a toggle in a input-group-btn, the `position: absolute` was overridden. By using a more specific selector, we ensure that position is absolute

Fixing #32

--- a/css/bootstrap4-toggle.css
+++ b/css/bootstrap4-toggle.css
@@ -50,7 +50,7 @@
 .toggle.off .toggle-group {
 	left: -100%;
 }
-.toggle-on {
+.input-group-btn .toggle-on, .toggle-on {
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -60,7 +60,7 @@
 	border: 0;
 	border-radius: 0;
 }
-.toggle-off {
+.input-group-btn .toggle-off, .toggle-off {
 	position: absolute;
 	top: 0;
 	bottom: 0;
